fix image size on mobile

--- a/theme-src/styles/texts.scss
+++ b/theme-src/styles/texts.scss
@@ -24,6 +24,7 @@
       text-align: center;
       padding: 20px 0;
       img {
+        width: 80%;
         max-width: 800px;
       }
     }
